<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio_actividades">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bordesredondos"
                android:paddingLeft="25dp"
                android:text="@string/mensaje_actividades"
                android:textColor="@android:color/black"
                android:textSize="24dp" />

            <RelativeLayout
                android:id="@+id/lytCaminata"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bordesredondos"
                android:onClick="empezarCaminata"
                android:clickable="true"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/imgCaminar"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/caminata" />

                <TextView
                    android:id="@+id/tvActividadCaminata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgCaminar"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/actividad_caminar"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytCorrer"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bordesredondos"
                android:clickable="true"
                android:onClick="empezarCorrer"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/imgCorrer"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/corrrer" />

                <TextView
                    android:id="@+id/tvActividadCorrer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgCorrer"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/actividad_correr"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytCiclismo"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bordesredondos"
                android:onClick="empezarCiclismo"
                android:clickable="true"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/imgCiclismo"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ciclismo" />

                <TextView
                    android:id="@+id/tvActividadCiclismo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgCiclismo"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/actividad_ciclismo"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </RelativeLayout>


        </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>